--- a/index.html
+++ b/index.html
@@ -32,25 +32,23 @@
                 <option value="custom-array">Custom Array</option>
             </select>
             <div id="random-array-fields">
-                <label for="">Min: </label><input min="0" id="minValue" type="number">
-                <label for="">Max: </label><input min="0" id="maxValue" type="number">
-                <label for="">Count: </label><input min="5" id="count" type="number">
+                <label for="">Min: </label><input value="5" min="0" id="minValue" type="number">
+                <label for="">Max: </label><input value="30" min="0" id="maxValue" type="number">
+                <label for="">Count: </label><input value="30" min="5" max="100" id="count" type="number">
             </div>
             <div id="custom-array-fields">
-                <label for="">Values: </label><input id="custom-value" value="10,19,7,6,4" type="text">
+                <label for="">Values: </label><input id="custom-value" value="10,19,7,6,4,5,7,3,14,4,2" type="text">
             </div>
-            <!-- <input type="text" name="elements" id="elements"> -->
             <input type="button" id="generate" value="Generate">
         </div>
         <div class="compare">
             <input type="button" value="Compare">
         </div>
     </div>
-    <!-- <div id="array"></div><br> -->
     <div id="drawArray">
-        <input type="button" value="sort" id="visualize"><br>
     </div>
     <div id="flow-control">
+        <input type="button" value="Sort" id="visualize">
         <div id="speed-control">
             <label for="speed">Speed: </label><input id="speed" type="range" min="1" max="100" value="50">
         </div>
